--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -181,25 +181,13 @@
         </div>
 
         <section class="block u-mb0">
-            <h1 class="header-slug">
-                <span class="header-slug_inner">
-                    Related links
-                </span>
-            </h1>
-            <ul class="list list__unstyled list__links">
-                <li class="list_item">
-                    <a class="list_link jump-link jump-link__right"
-                       href="{{ vars.path + 'about-steve-antonakes/' }}">
-                        Learn about Deputy Director Steven Antonkes
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link jump-link jump-link__right"
-                       href="{{ vars.path + 'bureau-structure/' }}">
-                        Bureau organizational structure
-                    </a>
-                </li>
-            </ul>
+            {%- import "related-links.html" as related_links %}
+            {{ related_links.render([
+                [ vars.path + 'about-steve-antonakes/',
+                  'Learn about Deputy Director Steven Antonkes' ],
+                [ vars.path + 'bureau-structure/',
+                  'Bureau organizational structure' ],
+            ]) -}}
         </section>
 
     </aside>
