Added initial content to page
Used placeholder text for page description and using blog query for temp email signup query. These should be replaced when the WP View cpt is created for this page

--- a/events/_vars-events.html
+++ b/events/_vars-events.html
@@ -1,21 +1,12 @@
 
 {% set path = '/events/' %}
 {% set rss_path = '/feed/events/' %}
-{% set nav_items = [
-    (path, 'index', 'Upcoming events and field hearings'),
-    (path + 'archive/', 'archive', 'Archive')
-]
-%}
-
-{# SAVED THESE FOR LATER
 
 {% set nav_items = [
     (path, 'index', 'Upcoming events and field hearings'),
     (path + 'archive/', 'archive', 'Archive')
 ] %}
 
-
-{% set query = queries.events %}
+{# Temp using blog query to render the signup form #}
+{% set query = queries.posts %}
 {% set events = query.search_with_url_arguments(size=10) %}
-
-#}
