--- a/events/index.html
+++ b/events/index.html
@@ -41,7 +41,10 @@
 
 {% block content_main %}
 
-    Events content goes here
+    {# TEMP The mocked event content is in the following paragraph #}
+    <p>
+        Events content goes here: {{vars.mock_post.content}}
+    </p>
 
     {# Footer #}
     <aside>
