Fixes DF-1470 - adds event detail sidebar
- Fixes DF-1470 - adds event detail sidebar for displaying RSVP
information for an upcoming event.
- Adds `event-meta_description` pattern.
- Adds page-specific `event.less` file.
- Increases mocked front-end data content length so sidebar sits nicely
next to a lot more content.

--- a/events/_vars-events.html
+++ b/events/_vars-events.html
@@ -17,7 +17,25 @@
 'category': ['Announcements & updates'],
 'author': ['Jane Doe'],
 'taxonomy_post_tag': [],
-'content': 'THIS IS THE CONTENT Our regulatory agenda includes rulemaking actions in the following stages: pre-rule, proposed rule, final rule, long term actions, and completed actions.',
+'content': '<p>
+                THIS IS THE CONTENT Lorem ipsum dolor sit amet,
+                consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Cum corrupti tempora nam nihil qui mollitia consectetur
+                corporis nemo culpa dolorum! Laborum at eos deleniti
+                consequatur itaque officiis debitis quisquam! Provident!
+            </p>',
 'comment_count': 0.0,
 'categories': [],
 'type': 'posts',
