--- a/events/_single.html
+++ b/events/_single.html
@@ -23,7 +23,15 @@
 
 {% block content_main %}
     {% import "_event.html" as article with context %}
+    {% import "event-agenda-table.html" as calendar %}
+
     {{ article.render(vars.mock_event, vars.path) }}
+
+    <div class="block u-mt0">
+
+    {{ calendar.render(vars.mock_event) }}
+
+    </div><!-- END calendar -->
 {% endblock %}
 
 {% block content_sidebar %}
