--- a/offices/_vars-offices.html
+++ b/offices/_vars-offices.html
@@ -1,7 +1,6 @@
 
 {% set query = queries.initiative %}
-{% set filter = 'related_office:' + office.slug %}
-{% set initiatives = query.search_with_url_arguments(size=100,q=filter) %}
+{% set initiatives = query.search_with_url_arguments(size=100,filter_related_office=office.slug) %}
 
 {% set nav_items = [(path, 'index', office.title)] -%}
 {% for initiative in initiatives %}
