--- a/events/_single.html
+++ b/events/_single.html
@@ -24,6 +24,23 @@
 {% block content_main %}
     {% import "_event.html" as article with context %}
     {{ article.render(vars.mock_event, vars.path) }}
+
+    <div class="event-footer">
+        <p class="event-footer_banner">
+            <span class="event-footer_banner-message h4">This event requires an RSVP. Reserve your spot here: </span>
+            <a href="mailto:reserve@cfpb.gov?subject=Event RSVP&body=To RSVP, please fill in your first and last name below and send this email.%0D%0A%0D%0AFirst name:%0D%0ALast name:" class="btn"><span class="btn_icon__left cf-icon cf-icon-email-social"></span> reserve@cfpb.gov</a>
+        </p>
+        <div class="content-l">
+            <section class="content-l_col content-l_col-1-2 event-footer_col">
+                <h3 class="h4 u-mb5">Downloads</h3>
+                <a href="#" class="event-footer_link">Download event PDF <span class="cf-icon cf-icon-pdf"></span></a>
+            </section>
+            <section class="content-l_col content-l_col-1-2 event-footer_col content-l_col__before-divider">
+                <h3 class="h4 u-mb5">Do you have event questions?</h3>
+                <a href="mailto:reserve@cfpb.gov?subject=Event Question&body=Please include your question and fill in your first and last name below and send this email.%0D%0A%0D%0AQuestion:%0D%0AFirst name:%0D%0ALast name:" class="event-footer_link"><span class="cf-icon cf-icon-email-social"></span> reserve@cfpb.gov</a>
+            </section>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content_sidebar %}
