bugfix - Removed before-divider
For real this time

--- a/events/_single.html
+++ b/events/_single.html
@@ -35,7 +35,7 @@
                 <h3 class="h4 u-mb5">Downloads</h3>
                 <a href="#" class="event-footer_link">Download event PDF <span class="cf-icon cf-icon-pdf"></span></a>
             </section>
-            <section class="content-l_col content-l_col-1-2 event-footer_col content-l_col__before-divider">
+            <section class="content-l_col content-l_col-1-2 event-footer_col">
                 <h3 class="h4 u-mb5">Do you have event questions?</h3>
                 <a href="mailto:reserve@cfpb.gov?subject=Event Question&body=Please include your question and fill in your first and last name below and send this email.%0D%0A%0D%0AQuestion:%0D%0AFirst name:%0D%0ALast name:" class="event-footer_link"><span class="cf-icon cf-icon-email-social"></span> reserve@cfpb.gov</a>
             </section>
