Fixes DF-1469/Event Detail Venu
Revisions for Code Review

--- a/events/_event.html
+++ b/events/_event.html
@@ -53,6 +53,8 @@
              src="{{ post.thumbnail.images.full.url }}"
              alt="{{ post.thumbnail.alt_text }}">
     {% endif %}
+    {% from "event-post-macros.html" import event_venue as event_venue %}
+    {{ event_venue(post) }}
     </header>
     <div class="post_body">
         <aside class="post_inset post_inset__right line-container event-status">
