--- a/events/_event.html
+++ b/events/_event.html
@@ -61,7 +61,7 @@
                     <strong>This event requires an RSVP.</strong>
                 </p>
                 <p>
-                    <a href="mailto:reserve@cfpb.gov?subject=Event RSVP&body=To RSVP, please fill in your first and last name below and send this email.%0D%0A%0D%0AFirst name:%0D%0ALast name:" class="btn"><span class="cf-icon cf-icon-email-social"></span> reserve@cfpb.gov</a>
+                    <a href="mailto:reserve@cfpb.gov?subject=Event RSVP&body=To RSVP, please fill in your first and last name below and send this email.%0D%0A%0D%0AFirst name:%0D%0ALast name:" class="btn"><span class="btn_icon__left cf-icon cf-icon-email-social"></span> reserve@cfpb.gov</a>
                 </p>
                 <p>
                     {# TODO Change to livestream icon when that's added to cf-icons. #}
