Updated directors Download/Request section
- Removed hide on mobile style for D Antonakes
- Reorganized links to use link-list pattern
- Fixes #281

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -43,7 +43,7 @@
         </p>
         {{ share(self.title(), true) }}
     </div>
-    
+
     <section class="block
                     block__padded-top
                     block__border-top">
@@ -56,9 +56,7 @@
                     </div>
                     <div class="media_body">
                         <h1 class="h4 u-mb5">Downloads</h1>
-                        <ul class="list list__links
-                                   list__horizontal
-                                   u-mb0">
+                        <ul class="list list__links">
                             <li class="list_item">
                                 <a class="list_link jump-link jump-link__download"
                                    href="/newsroom/press-resources/201402_cfpb_photo_richard-cordray_high-res.jpg">
@@ -80,15 +78,15 @@
                 <h1 class="h4 u-mb5">
                     Request speaking info
                 </h1>
-                <span class="cf-icon cf-icon-email"></span>
                 <a class="styled-link"
                    href="mailto:externalaffairs@cfpb.gov">
+                    <span class="cf-icon cf-icon-email"></span>
                     externalaffairs@cfpb.gov
                 </a>
             </div>
         </div>
     </section>
-    
+
     <aside>
 
         <section class="block
