--- a/the-bureau/about-steve-antonakes/index.html
+++ b/the-bureau/about-steve-antonakes/index.html
@@ -41,8 +41,8 @@
         </p>
         {{ share(self.title(), true) }}
     </div>
-    
-    <section class="block block__padded-top block__padded-bottom block__border-top u-hide-on-mobile">
+
+    <section class="block block__padded-top block__padded-bottom block__border-top">
         <div class="content-l content-l__main">
             <div class="content-l_col content-l_col-1-2">
                 <div class="media">
@@ -53,30 +53,36 @@
                         <h1 class="h4 u-mb5">
                             Downloads
                         </h1>
-                        <a class="jump-link jump-link__download"
-                           href="/newsroom/press-resources/201405_cfpb_photo_steve-antonakes_high-res.jpg">
-                            High-res photo
-                        </a>
-                        <a class="jump-link jump-link__download"
-                           href="201410_cfpb_bio_antonakes.pdf">
-                            Biography
-                        </a>
+                        <ul class="list list__links">
+                            <li class="list_item">
+                                <a class="list_link jump-link jump-link__download"
+                                   href="/newsroom/press-resources/201405_cfpb_photo_steve-antonakes_high-res.jpg">
+                                    High-res photo
+                                </a>
+                            </li>
+                            <li class="list_item">
+                                <a class="list_link jump-link jump-link__download"
+                                   href="201410_cfpb_bio_antonakes.pdf">
+                                    Biography
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+            <div class="content-l_col content-l_col-1-2">
                 <h1 class="h4 u-mb5">
                     Request speaking info
                 </h1>
-                <span class="cf-icon cf-icon-email"></span>
                 <a class="styled-link"
                    href="mailto:externalaffairs@cfpb.gov">
+                    <span class="cf-icon cf-icon-email"></span>
                     externalaffairs@cfpb.gov
                 </a>
             </div>
         </div>
     </section>
-    
+
     <aside>
 
         <section class="block block__padded-top block__border-top">
