--- a/events/_vars-events.html
+++ b/events/_vars-events.html
@@ -7,7 +7,7 @@
 ]
 %}
 
-{# TEMP Mock object for events #}
+{# TODO Remove mock object for events when backend data is available. #}
 {% set mock_event =
 {
   'taxonomy_post_format': [],
