--- a/events/index.html
+++ b/events/index.html
@@ -44,6 +44,7 @@
     <section class="media block block__flush-top block__sub">
         <div class="media_body">
             <h1>Upcoming events</h1>
+            {# TODO Replace ipsum with latest upcoming event content. #}
             <p class="h3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.<p>
         </div>
         {% import "events-posts.html" as events_posts with context %}
