--- a/events/_single.html
+++ b/events/_single.html
@@ -2,11 +2,11 @@
 {% import "_vars-events.html" as vars with context %}
 
 {% block title -%}
-    {{ vars.mock_event.title }}
+    {{ vars.mock_event.title }} {# TODO Replace mock data #}
 {%- endblock %}
 
 {% block desc -%}
-    {{ vars.mock_event.excerpt|striptags }}
+    {{ vars.mock_event.excerpt|striptags }} {# TODO Replace mock data #}
 {%- endblock %}
 
 {% block og_type -%}
@@ -25,13 +25,12 @@
     {% import "_event.html" as article with context %}
     {% import "event-agenda-table.html" as calendar %}
 
-    {{ article.render(vars.mock_event, vars.path) }}
+    {{ article.render(vars.mock_event, vars.path) }} {# TODO Replace mock data #}
 
     <div class="block u-mt0">
+    {{ calendar.render(vars.mock_event) }} {# TODO Replace mock data #}
+    </div>
 
-    {{ calendar.render(vars.mock_event) }}
-
-    </div><!-- END calendar -->
     <div class="event-footer">
         <p class="event-footer_banner">
             <span class="event-footer_banner-message h4">This event requires an RSVP. Reserve your spot here: </span>
