--- a/events/index.html
+++ b/events/index.html
@@ -45,13 +45,20 @@
         <div class="media_body">
             <h1>Upcoming events</h1>
             {# TODO Replace ipsum with latest upcoming event content. #}
-            <p class="h3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.<p>
+            <p class="h3 block block__flush-bottom">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+                laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit.
+            </p>
         </div>
-
-        {% for post in vars.events %}
-            {% from "_event-landing-macros.html" import event_preview as event_preview %}
-            {{ event_preview(post) }}
-        {% endfor %}
+        <div class='block block__padded-top'>
+            {% for post in vars.events %}
+                {% from "_event-landing-macros.html" import event_preview as event_preview %}
+                {{ event_preview(post) }}
+            {% endfor %}
+         </div>
     </section>
 
     {# Footer #}
