--- a/budget/index.html
+++ b/budget/index.html
@@ -6,7 +6,7 @@
 {%- endblock %}
 
 {% block desc -%}
-    
+
 {%- endblock %}
 
 {% block content_main_modifiers -%}
@@ -21,7 +21,13 @@
         </div>
         <div class="media_body">
             <h1>Budget and strategy</h1>
-            <p class="h3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.<p>
+            <p class="h3">The mission of the CFPB is to make consumer finance rules more effective, to consistently and fairly enforce those rules, and to empower consumers to take more control over their economic lives. Our vision is a consumer finance marketplace:</p>
+            <ul class="h3 list list__branded">
+                <li>where customers can see prices and risks up front and where they can easily make product comparisons;</li>
+                <li>in which no one can build a business model around unfair, deceptive, or abusive practices;</li>
+                <li>that works for American consumers, responsible providers, and the economy as a whole.</li>
+            </ul>
+            <p class="h3">We publish our strategy and budget so the public can hold us accountable.<p>
         </div>
     </section>
 
@@ -29,37 +35,23 @@
 
         <div class="content-l content-l__main content-l__large-gutters">
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
-                <h2 class="h3">Our budget</h2>
-                <p class="short-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
-                </p>
+                <h2 class="h3">Strategic plan</h2>
+                <p class="short-desc">In compliance with federal law, we publish a five-year strategy for pursuing our mission and vision.</p>
                 <ul class="list list__links">
                     <li class="list_item">
-                        <a class="list_link jump-link jump-link__right" href="">
-                            View our budget
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a class="list_link jump-link jump-link__right" href="">
-                            2015 budget
+                        <a class="list_link jump-link jump-link__right" href="/budget/strategic-plan/">
+                            Review the CFPB's strategic plan
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
-                <h2 class="h3">Our financial report</h2>
-                <p class="short-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
-                </p>
+                <h2 class="h3">Performance plans and reports</h2>
+                <p class="short-desc">Every year, we measure our performance against our strategic plan and explain how we will continue to make progress.</p>
                 <ul class="list list__links">
                     <li class="list_item">
-                        <a class="list_link jump-link jump-link__right" href="financial-report">
-                            View our financial report
-                        </a>
-                    </li>
-                    <li class="list_item">
-                        <a class="list_link jump-link jump-link__right" href="">
-                            2014 financial budget
+                        <a class="list_link jump-link jump-link__right" href="/budget/performance-plan-report/">
+                            See our performance plans and reports
                         </a>
                     </li>
                 </ul>
@@ -67,42 +59,54 @@
         </div>
         <div class="content-l content-l__main content-l__large-gutters">
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
-                <h2 class="h3">Funding request</h2>
-                <p class="short-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
-                </p>
-                <a class="jump-link jump-link__right" href="funding-request">
-                    View funding requests
+                <h2 class="h3">Financial reports and updates</h2>
+                <p class="short-desc">Our budget describes what it takes to execute our plan. We detail the budget in annual reports and quarterly updates.</p>
+                <a class="jump-link jump-link__right" href="/budget/financial-report/">
+                    Review our financial reports and updates
                 </a>
             </div>
             <div class="content-l_col content-l_col-1-2 block block__flush-top block__sub">
-                <h2 class="h3">Service contracts</h2>
-                <p class="short-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.
-                </p>
-                <a class="jump-link jump-link__right" href="">
-                    View service contracts
+                <h2 class="h3">Funding requests</h2>
+                <p class="short-desc">We receive funding from the Federal Reserve Board. We publish all our funding requests and the Fed's replies.</p>
+                <a class="jump-link jump-link__right" href="/budget/funding-request/">
+                    Review our funding requests
                 </a>
             </div>
         </div>
     </section>
-    
-    <section class="block block__flush-sides block__flush-top block__flush-bottom block__bg">
-        {%- import "related-links.html" as related_links -%}
-        {{- related_links.render([
-            [ '/newsroom/',
-              'Newsroom' ],
-            [ '/the-bureau/',
-              'About us' ],
-            [ '/blog/',
-              'The blog' ]
-        ],[
-            [ '#',
-              'Civil penalty fund' ],
-            [ '#',
-              'Working with the CFPB' ]
-        ]) -}}
-    </section>
+
+    {# Footer #}
+    <aside>
+        <div class="block u-mb0 block__flush-sides block__bg">
+            <div class="content-l content-l__main">
+                <section class="content-l_col content-l_col-1-2">
+                    <h1 class="header-slug">
+                        <span class="header-slug_inner">
+                            Doing business with the CFPB
+                        </span>
+                    </h1>
+                    <p class="short-desc">
+                        We work with vendors who can help us achieve our mission. We publish information information about both existing and future procurements.
+                    </p>
+                    <a class="jump-link" href="/doing-business-with-us/">
+                        Learn more about opportunities to work with the CFPB
+                    </a>
+                </section>
+                <section class="u-mb20 content-l_col content-l_col-1-2">
+                    <!-- TODO: Add Civil Penalty Fund url -->
+                    {%- import "related-links.html" as related_links -%}
+                    {{- related_links.render([
+                        [ '/the-bureau/',
+                          'About the CFPB' ],
+                        [ '/blog/',
+                          'The blog' ],
+                        [ '#',
+                          'Civil Penalty Fund' ]
+                    ]) -}}
+                </section>
+            </div>
+        </div>
+    </aside>
 
 {% endblock %}
 
